// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 [babel-ts] format 1`] = `
"'abstract' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   abstract e();
    |   ^
  3 | }"
`;

exports[`snippet: #0 [typescript] format 1`] = `
"'abstract' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   abstract e();
    | ^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"'declare' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   declare e();
    |   ^
  3 | }"
`;

exports[`snippet: #1 [typescript] format 1`] = `
"'declare' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   declare e();
    | ^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #2 [babel-ts] format 1`] = `
"Unexpected token, expected ";" (2:10)
  1 | interface Foo {
> 2 |   export e();
    |          ^
  3 | }"
`;

exports[`snippet: #2 [typescript] format 1`] = `
"'export' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   export e();
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #3 [babel-ts] format 1`] = `
"'static' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   static e();
    |   ^
  3 | }"
`;

exports[`snippet: #3 [typescript] format 1`] = `
"'static' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   static e();
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #4 [babel-ts] format 1`] = `
"'private' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   private e();
    |   ^
  3 | }"
`;

exports[`snippet: #4 [typescript] format 1`] = `
"'private' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   private e();
    | ^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #5 [babel-ts] format 1`] = `
"'protected' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   protected e();
    |   ^
  3 | }"
`;

exports[`snippet: #5 [typescript] format 1`] = `
"'protected' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   protected e();
    | ^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #6 [babel-ts] format 1`] = `
"'public' modifier cannot appear on a type member. (2:3)
  1 | interface Foo {
> 2 |   public e();
    |   ^
  3 | }"
`;

exports[`snippet: #6 [typescript] format 1`] = `
"'public' modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   public e();
    | ^^^^^^^^^
  3 | }"
`;
